A fix (bug #9837: round(1, 6) delivers wrong value in create table context).